@@ -26,7 +26,7 @@ import com.google.errorprone.matchers.Description;
 import com.sun.tools.javac.tree.EndPosTable;
 import com.sun.tools.javac.tree.JCTree.JCCompilationUnit;
 import java.net.URI;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.LinkedHashSet;
 import java.util.Objects;
 import java.util.Set;
@@ -68,7 +68,7 @@ public final class DescriptionBasedDiff implements DescriptionListener, Diff {
     URI sourceFileUri = compilationUnit.getSourceFile().toUri();
     this.sourcePath =
         (sourceFileUri.isAbsolute() && Objects.equals(sourceFileUri.getScheme(), "file"))
-            ? Paths.get(sourceFileUri).toAbsolutePath().toString()
+            ? Path.of(sourceFileUri).toAbsolutePath().toString()
             : sourceFileUri.getPath();
     this.ignoreOverlappingFixes = ignoreOverlappingFixes;
     this.importsToAdd = new LinkedHashSet<>();
